<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grid_color"
    android:orientation="vertical"
    tools:context=".DetailedActivity">

    <RelativeLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/white">

        <include layout="@layout/detailed_game_list"></include>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/detailed_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/platforms"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/detailed_platform"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@id/platforms"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/zelda_description"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/developer"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/description"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:text="@string/detailed_publisher"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_below="@id/description"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@id/developer"
            android:text="@string/detailed_genre"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/esrb_rating"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/description"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@id/genres"
            android:text="@string/detailed_esrb_rating"
            android:textAlignment="center"
            android:textColor="@color/black" />


    </RelativeLayout>


</LinearLayout>